SUBDIRS = bin .
DIST_SUBDIRS = $(SUBDIRS) lib

nobase_dist_pkgdata_DATA =
nobase_python_PYTHON =
nobase_nodist_python_PYTHON =
noinst_DATA = 
pkglib_SCRIPTS =
EXTRA_DIST =
MAINTAINERCLEANFILES =
DISTCLEANFILES = 
CLEANFILES =

include $(top_srcdir)/build-aux/slcvars.mk

include slc.mk
include runscripts.mk
include lib.mk

