## Makefile.am: this file is part of the SL toolchain.
## 
## Copyright (C) 2009 The SL project
##
## This program is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License
## as published by the Free Software Foundation; either version 2
## of the License, or (at your option) any later version.
##
## The complete GNU General Public Licence Notice can be found as the
## `COPYING' file in the root directory.
##

BENCHMARKS = bench1.c bench2.c bench3.c bench4.c bench5.c bench6.c	\
	bench7.c bench8.c bench9.c bench10.c bench11.c bench12.c	\
	bench15.c bench19.c bench21.c bench22.c bench23.c

BENCHMARK_INPUTS = bench1.inputs bench2.inputs bench3.inputs bench4.inputs bench5.inputs bench6.inputs	\
	bench7.inputs bench8.inputs bench9.inputs bench10.inputs bench11.inputs bench12.inputs	\
	bench15.inputs bench19.inputs bench21.inputs bench22.inputs bench23.inputs

EXTRA_DIST = $(BENCHMARKS) $(BENCHMARK_INPUTS)

include $(top_srcdir)/build-aux/benchmarks.mk

